--- a/yoga/index.html
+++ b/yoga/index.html
@@ -233,7 +233,7 @@
 	 		</div>
 	</div>
 	<script src="js/script.js"></script>
-	<script src="js/script_ES6.js"></script>
+<!--	<script src="js/script_ES6.js"></script>-->
 
 </body>
 </html>
