--- a/yoga/index.html
+++ b/yoga/index.html
@@ -104,6 +104,12 @@
 				<div class="timer-action">
 					До конца акции осталось
 				</div>
+				<div class="timer-name">
+					<span>Дней</span>
+					<span>Часов</span>
+					<span>Минут</span>
+					<span>Секунд</span>
+				</div>
 				<div class="timer-numbers" id="timer">
 					<span class="days">18</span>
 					<span>:</span>
